# CHONKER_SNYFTER

./: .env.example  .gitignore  1.html  1.md  1_default.html  1_dlparse_v4_force_ocr.html  BIDIRECTIONAL_HIGHLIGHTING.md  BREAKTHROUGH_WRITEUP.md  CHEAT_SHEET.md  CHONKER.py  CHONKER_old.py  CLAUDE_ECOSYSTEM_SETUP.md  CLEANUP_REPORT.md  COMMAND_HOTLIST.md  COMPILATION_OPTIMIZATION.md  CRITICAL_EMOJI_SOLUTION.md  CRITICAL_RENDER_LOGIC.md  CalcurseTray.applescript  Cargo.toml  Cargo_validator.toml  DATA_VISUALIZATION_README.md  DEBUG_COPY_PASTE.md  DEBUG_PANEL_READY.md  DEBUG_REPORT.md  DEBUG_TEXT_EDIT.md  DIRECT_EDITING_READY.md  ELEGANT_IMPROVEMENTS.md  ELEGANT_V2_CHANGES.md  EMOJI_REFERENCE.md  ENHANCED_INTEGRATION_SUMMARY.md  ENHANCEMENT_FEEDBACK_REPORT.md  EPA-HQ-OAR-2010-0682-0085_attachment_1_viewer.html  EXAMPLE_NIGHTMARE_PDF.md  EXAMPLE_NIGHTMARE_PDF_DEBUG_FIXED.md  EXAMPLE_NIGHTMARE_PDF_DEBUG_FIXED_SUMMARY.md  EXAMPLE_NIGHTMARE_PDF_DIRECT_FIXED.md  EXAMPLE_NIGHTMARE_PDF_DIRECT_FIXED_SUMMARY.md  EXAMPLE_NIGHTMARE_PDF_ENHANCED_FIXED.md  EXAMPLE_NIGHTMARE_PDF_ENHANCED_FIXED_SUMMARY.md  EXAMPLE_NIGHTMARE_PDF_QWEN_FIXED.md  (+312 more)
.claude/: settings.local.json
.warp/notebooks/: known-issues.md
.warp/workflows/: safe-commit.yaml
1-MorrisonFinal-results/: 1-MorrisonFinal.json  1-MorrisonFinal.md
apps/doc-service/: .gitignore  README.md  main.py  package.json  requirements.txt  test_doc.md
apps/frontend/: package-lock.json  package.json  vite.config.ts
apps/tauri-app/: Cargo.toml  package-lock.json  package.json  tauri.conf.json
apps/tauri-app/src/: lib.rs  main.rs
backups/20250717_173804/: config.py  (+1 more)
chonker5-tui/: Cargo.toml  README.md
chonker5-tui/src/: main.rs  main_enhanced.rs  pdf_cache.rs
config/: __init__.py  settings.py
csv_to_html_table/: Cargo.toml
demo_reports/: database_stats.txt  full_dataset.csv  quality_report.md
exports/: chonker_test_20250718_114122.json  chonker_test_20250718_114122_content.parquet  chonker_test_20250718_114122_metadata.parquet
faithful_output/: EPA-HQ-OAR-2010-0682-0085_attachment_1_faithful.json  EPA-HQ-OAR-2010-0682-0085_attachment_1_full.md  EPA-HQ-OAR-2010-0682-0085_attachment_1_metadata.json  EPA-HQ-OAR-2010-0682-0085_attachment_1_page_1.txt  EPA-HQ-OAR-2010-0682-0085_attachment_1_page_2.txt  EPA-HQ-OAR-2010-0682-0085_attachment_1_page_3.txt  EPA-HQ-OAR-2010-0682-0085_attachment_1_page_4.txt  EPA-HQ-OAR-2010-0682-0085_attachment_1_page_5.txt  EPA-HQ-OAR-2010-0682-0085_attachment_1_table_0.csv  EPA-HQ-OAR-2010-0682-0085_attachment_1_table_0.json  EPA-HQ-OAR-2010-0682-0085_attachment_1_table_1.csv  EPA-HQ-OAR-2010-0682-0085_attachment_1_table_1.json  EPA-HQ-OAR-2010-0682-0085_attachment_1_table_2.csv  EPA-HQ-OAR-2010-0682-0085_attachment_1_table_2.json  EPA-HQ-OAR-2010-0682-0085_attachment_1_table_3.csv  EPA-HQ-OAR-2010-0682-0085_attachment_1_table_3.json  EPA-HQ-OAR-2010-0682-0085_attachment_1_table_4.csv  EPA-HQ-OAR-2010-0682-0085_attachment_1_table_4.json
frontend/: index.html  index_backup.html  index_broken.html
image_enhancer/: Cargo.toml
pipeline_outputs/: final.json  processed.json  raw.json
projects/chonker6/: COMMAND_SETUP.md  Cargo.toml  KITTY_GRAPHICS_FIX.md  README.md  README_FIXED.md  RUNNING_CHONKER6.md  RUN_ME.sh  TERMINAL_PANEL_IMPLEMENTATION.md  debug_chonker6.sh  debug_kitty.sh  demo.sh  install_chonker6.sh  run_chonker6.sh  run_test.sh  test_alternate_screen.sh  test_file_selector.sh  test_kitty_graphics.sh  test_kitty_manual.sh  test_kitty_pdf.sh  test_kitty_simple.sh  test_pdf_direct.rs  test_pdf_kitty.sh  test_simple_kitty.sh
projects/chonker6/src/: actions.rs  app.rs  chonker_matrix.rs  file_selector_matrix.rs  kitty_graphics.rs  main.rs  main_matrix.rs  matrix.rs
projects/chonker6/src/components/: file_selector.rs  mod.rs
projects/chonker6/src/services/: mod.rs  pdf_engine.rs
projects/chonker6/src/state/: app_state.rs  editor_state.rs  pdf_state.rs  ui_state.rs
python/: debug_chunks.py  debug_fixed_chunks.py  docling_html_bridge.py  emergency_extraction_bridge.py  enhanced_extraction_bridge.py  extraction_bridge.py  extraction_engine_config.py  extraction_pipeline.py  qwen_production_direct.py  qwen_production_fixer.py  qwen_simple_test.py  qwen_table_fixer.py  refactored_chunk_test.py  requirements.txt  simple_extraction_bridge.py  smoldocling_bridge.py  table_parser.py  test_enhanced_output.json  universal_table_fixer.py
reports/: database_stats.txt  quality_report.md
saved_chonker_chunks/: chunk_1.txt  chunk_2.txt
scripts/: batch_process.sh  check_character_consistency.py  debug_dev.sh  dev_workflow.sh  quality_check.sh  test_all.sh  validate_emojis.py
src/: app.rs  app_integration_example.rs  cli.rs  complexity.rs  config.rs  coordinate_mapping.rs  data_visualization.rs  database.rs  document_model.rs  error.rs  export.rs  extraction_integration.rs  extractor.rs  file_dialog.rs  html_extractor.rs  hybrid_extractor.rs  lib.rs  logging.rs  main.rs  markdown.rs  markdown_editor.rs  mupdf_viewer.rs  native_extractor.rs  pdf_cache.rs  pdf_viewer.rs  pdf_viewer_old.rs  processing.rs  project.rs  smart_chunker.rs  smart_column_extractor.rs  spatial.rs  sync.rs  tui.rs  tui_old.rs  tui_simple.rs  ui.rs  validation_editor.rs
src-tauri/: Cargo.toml  final_verification.py  package.json  tauri.conf.json  tauri.conf.svelte.json  test_output.html  verify_fix.py
src-tauri/pipeline_outputs/: final.json
src-tauri/src/: error.rs  extractor.rs  html_renderer.rs  lib.rs  lib_complex.rs  pdf_renderer.rs  processing.rs
src-tauri/src/unused/: chonker_types.rs  database.rs  html_renderer.rs  processing.rs
src-tauri/swift/: vision_ocr.swift
src-tauri/tests/: html_rendering_test.rs
swift/: Package.swift  vision_ocr  vision_ocr.swift
temp_pipeline_outputs/: final.json
test_docs/: large_doc.md  medium_doc.md  small_doc.md
test_results/: chonker.db  chonker.db-shm  chonker.db-wal  extract_output.txt  status_output.txt
tests/: integration_test.rs  load_test.sh  test_document_processor.py  test_integration.py  test_security.py  verify_parquet.py
utils/: __init__.py  display.py
(+358 files in other folders)
