[package]
name = "chonker5"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chonker5"
path = "chonker5.rs"

[dependencies]
eframe = "0.24"
egui = "0.24"
rfd = "0.15"
image = "0.25"
pdfium-render = { version = "0.8", features = ["thread_safe"] }
tokio = { version = "1.38", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
