[package]
name = "chonker5"
version = "0.1.0"
edition = "2021"
default-run = "chonker5"

[[bin]]
name = "chonker5"
path = "chonker5.rs"

[[bin]]
name = "test_phase1_improvements"
path = "test_phase1_improvements.rs"

[[bin]]
name = "test_ferrules_integration"
path = "test_ferrules_integration.rs"

[dependencies]
eframe = "0.24"
egui = "0.24"
rfd = "0.15"
image = "0.25"
pdfium-render = { version = "0.8", features = ["thread_safe"] }
tokio = { version = "1.38", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rstar = "0.12"
rayon = "1.10"
# Ferrules integration (optional)
ferrules-core = { path = "ferrules/ferrules-core", optional = true }

[features]
default = []
ferrules = ["ferrules-core"]

