[package]
name = "chonker5-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chonker5-tui"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# PDF processing (from original)
pdfium-render = { version = "0.8", features = ["thread_safe"] }

# Core utilities
anyhow = "1.0"
chrono = "0.4"

# Native file dialogs
rfd = "0.15"

# System clipboard
copypasta = "0.10"

# Terminal image support
ratatui-image = "2.0"
image = "0.25"

[features]
default = ["images"]
images = []