[package]
name = "chonker5-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chonker5-tui"
path = "src/main.rs"

[[bin]]
name = "chonker5-tui-enhanced"
path = "src/main_enhanced.rs"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# PDF processing (from original)
pdfium-render = { version = "0.8", features = ["thread_safe"] }

# Core utilities
anyhow = "1.0"

# Optional: Better terminal image support
# ratatui-image = { version = "2.0", optional = true }
# image = { version = "0.25", optional = true }

[features]
default = []
# Enable for terminals with image support (Kitty, WezTerm, iTerm2)
# images = ["ratatui-image", "image"]