[package]
name = "chonker-snyfter"
version = "1.0.0"
description = "CHONKER SNYFTER - Tauri Frontend"
authors = ["Jack <jack@chonker.ai>"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "chonker_snyfter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.3.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
